added toolz package to requirements.txt

--- a/DCGAN-audio/requirements.txt
+++ b/DCGAN-audio/requirements.txt
@@ -3,6 +3,7 @@ librosa
 numpy
 scipy
 matplotlib
+toolz
 
 #this project also requires tensorflow to run. See tensorflow docs for
 #install instructions
