modified makefile path to data corpus

--- a/DCGAN-audio/makefile
+++ b/DCGAN-audio/makefile
@@ -1,11 +1,28 @@
-#remove unnecessary files
+#remove unnecessary files. Requires admin privileges
 clean:
-	rm *.pyc	
+	rm -f *.pyc	
+	rm -rf logs/
+	rm -rf out/
+	rm -rf samples/
 
 #download dependencies
 download:
 	pip install -r requirements.txt
 
-#Run model with default options
-run:
-	python main.py --data_dir=./data/ --mode='train' --use_fourier=False
+#download data
+download-data:
+	python download.py VSTK
+
+#train model with fft augmentation (requires kernel w/ GPU support)
+train:
+	python main.py --data_dir=./data/VCTK-Corpus/ --mode='train' --use_fourier=True
+
+#train model without fft augmentation (FFT kernel ops only supported on GPU)
+train-cpu:
+	python main.py --data_dir=./data/VCTK-Corpus/ --use_fourier=False
+
+#generate samples using trained model
+generate:
+	python main.py --mode='generate'
+
+
